# nexusforge-platform

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Initial GCP Setup.md  Makefile  Multi-Container.md  README.md  Refactored.md  Repository Structure.md  nexusforge-platform.code-workspace  setup strategy.md
.github/actions/build-and-push-image/: action.yml
.github/actions/deploy-cloud-run/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/setup-gcp/: action.yml
.github/config/: environments.yml  services.yml
.github/workflows/: 01-infrastructure-setup.yml  02-deploy-dev.yml  03-deploy-staging.yml  04-deploy-prod.yml  05-security-scan.yml  06-backup.yml  07-disaster-recovery.yml  reusable-build-push.yml  reusable-deploy.yml  reusable-security-scan.yml  reusable-test.yml
config/docker/: .dockerignore  Dockerfile.go  Dockerfile.node  Dockerfile.python  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose-all-in-one.yml  docker-compose.yml
config/docker/postgres/: init-multiple-databases.sh
config/monitoring/prometheus/: prometheus.yml
config/nginx/: nginx-all-in-one.conf
config/security/: rbac-policies.yaml
docs/: 01-SETUP.md  02-DEVELOPMENT-GUIDE.md  03-DEPLOYMENT-GUIDE.md  04-SECURITY.md  05-TROUBLESHOOTING.md
infrastructure/scripts/: 00-setup-manager.sh  01-gcp-initial-setup.sh  02-dev-vm-setup.sh  02-workload-identity-setup.sh  03-dev-vm-all-in-one-setup.sh
scripts/utilities/: backup-database.sh  health-check.sh  monitor-all-in-one.sh  restore-database.sh
workspace/go/: .env.example  .golangci.yml  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  go.mod
workspace/go/cmd/api/: main.go
workspace/go/internal/config/: config.go
workspace/go/internal/handlers/: health.go  user.go
workspace/go/internal/middleware/: auth.go  cors.go  logger.go  metrics.go  rate_limit.go  recovery.go
workspace/go/internal/models/: user.go
workspace/go/internal/repository/: user_repository.go
workspace/go/tests/: health_test.go
workspace/nodejs/: .env.example  .eslintrc.json  IMPLEMENTATION_SUMMARY.md  README.md  jest.config.js  package.json  tsconfig.json
workspace/nodejs/prisma/: schema.prisma
workspace/nodejs/src/: index.ts
workspace/nodejs/tests/: health.test.ts  setup.ts
workspace/python/: .env.example  .pylintrc  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
workspace/python/alembic/: __init__.py  env.py
workspace/python/alembic/versions/: 001_create_users_table.py
workspace/python/app/: __init__.py  config.py  main.py
workspace/python/app/middleware/: __init__.py  rate_limit.py
workspace/python/app/models/: __init__.py  base.py  user.py
workspace/python/app/routes/: __init__.py  api.py  health.py
workspace/python/app/schemas/: __init__.py  user.py
workspace/python/app/services/: __init__.py  user_service.py
workspace/python/app/utils/: __init__.py  auth.py  cache.py  database.py  logger.py  security.py
workspace/python/tests/: __init__.py  conftest.py  test_health.py
workspace/python/tests/integration/: test_api.py
workspace/python/tests/unit/: test_user_service.py
(+24 files in other folders)
